Translate smallfile-ku.po via GitLocalize

--- a/de/smallfile-ku.po
+++ b/de/smallfile-ku.po
@@ -12,7 +12,7 @@ msgstr "Ein Screenshot, der die Amp-Sidebar zeigt."
 
 #: /views/partials/format-visuals/websites.j2:7
 msgid "A website screenshot."
-msgstr ""
+msgstr "A website screenshot."
 
 #: /views/partials/footer.j2:74
 msgid "AMP Brand Materials"
@@ -24,7 +24,7 @@ msgstr "AMP-Caches & CORS"
 
 #: /views/partials/footer.j2:71
 msgid "AMP Conf 2020"
-msgstr ""
+msgstr "AMP-Conf 2020"
 
 #: /views/partials/banner.j2:5
 msgid "AMP Contributor Summit 2019 Applications Now Open"
@@ -36,7 +36,7 @@ msgstr "AMP-Framework"
 
 #: /content/amp-dev/documentation/guides-and-tutorials/learn/spec/_blueprint.yaml
 msgid "AMP HTML Specification"
-msgstr ""
+msgstr "AMP-HTML-Spezifikation"
 
 #: /content/amp-dev/support/faq/overview.md
 msgid "AMP Overview"
